--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^13.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "bootstrap": "^5.2.3",
+    "node-sass": "^7.0.3",
     "rxjs": "~7.5.0",
+    "sass-loader": "^13.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
