--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.2.3",
+    "ngx-pipes": "^3.2.0",
     "node-sass": "^7.0.3",
     "rxjs": "~7.5.0",
     "sass-loader": "^13.2.0",
